# mynyc-benefits

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/programs/: page.tsx
frontend/src/app/programs/[id]/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/screener/: page.tsx
frontend/src/data/federal/: eitc.json  heap.json  section8.json
frontend/src/data/nyc/: drie.json  free_tax_prep.json
frontend/src/lib/data/: programs.ts
frontend/src/lib/eligibility/: engine.ts  fpl.ts  types.ts
src/mygovassist/: __init__.py
src/mygovassist/ai/: cache.py  normalizer.py  provider.py  responder.py  router.py  static_qa_matcher.py
src/mygovassist/ai/prompts/: system.md
src/mygovassist/cli/: app.py  display.py  screener.py
src/mygovassist/data/federal/: ctc.json  medicaid.json  snap.json  wic.json
src/mygovassist/data/nyc/: fair_fares.json  getfood.json  idnyc.json  nyc_care.json  scrie.json
src/mygovassist/eligibility/: engine.py  fpl.py  models.py
src/mygovassist/static_qa/: index.json
tests/: test_cache.py  test_data_integrity.py  test_fpl.py  test_normalizer.py  test_scenarios.py  test_static_qa.py
